Sesli Rehber v0.9: expose TTS busy state for wake loop